@@ -1,4 +1,5 @@
-dtrace: script 'test/dt_test/aggcount.d' matched 1 probe
 
 
   number of times fired                                            20
+-- @@stderr --
+dtrace: script 'test/dt_test/aggcount.d' matched 1 probe
