@@ -1,5 +1,6 @@
-dtrace: script 'test/dtrace/end.d' matched 2 probes
 
 CPU     ID                    FUNCTION:NAME
                                        :END total time: 11 secs
           
+-- @@stderr --
+dtrace: script 'test/dtrace/end.d' matched 2 probes
