@@ -1,4 +1,5 @@
-dtrace: script 'test/intro/hello.d' matched 1 probe
 CPU     ID                    FUNCTION:NAME
                                      :BEGIN   hello, world                     
           
+-- @@stderr --
+dtrace: script 'test/intro/hello.d' matched 1 probe
