@@ -1,4 +1,5 @@
-dtrace: script 'test/script/interp.d' matched 1 probe
 CPU     ID                    FUNCTION:NAME
                                      :BEGIN   hello                            
           
+-- @@stderr --
+dtrace: script 'test/script/interp.d' matched 1 probe
